--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "sequelize": "^6.25.5",
-    "sqlite": "^4.1.2"
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "jest": "^29.3.1",
